<resources>
    <string name="app_name">Rota Verde</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="fragment_login_name">Login</string>
    <string name="fragment_register_name">Registrar-se</string>
    <string name="confirm_password_hint">Confirme a Senha</string>
    <string name="register_button">Registrar</string>
    <string name="no_connection">Sem Conexão!</string>
</resources>
